# ngiab-teehr

./: Changelog.md  Dockerfile  README.md  example_guide.sh  pyproject.toml  requirements.txt  teehr_ngen_example.py  utils.py
.github/: docker_publish.yaml
.github/workflows/: docker_publish.yaml
docs/: 00_CONTENTS.md  01_USAGE.md  02_SCRIPTS.md  03_CONTAINER.md  04_CONTRIBUTE.md
scripts/: teehr_ngen.py  utils.py
