[tool.poetry]
name = "ngiab-teehr"
version = "0.1.0"
description = ""
authors = ["Sam Lamont <slamont@rti.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
bokeh = "^3.6.0"
dask-expr = "^1.1.15"
teehr = {git = "https://github.com/RTIInternational/teehr.git", rev = "main"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
